    environments.  See mosref/prod.ms for examples of usage.
  + Added mosref/prod, an expert system for interrogating network services
    discovered by mosref/scanner and classifying their response for the
    operator.

- ?/??/????, Build System Overhaul
  * bin/mosc now accepts zero or more module arguments -- it will build all
    of the listed modules, in dependency order.

  * compile now imports modules, instead of trying to guess the imported 
    symbols and macros.  For complicated macros, this greatly improves
    reliability, and, more importantly, more closely resembles user
    expectations.

  * mosvm stubs now invoke the (main) function at the end of load

- 6/28/2006, MOSREF Scanner
  * Added (| integer mask ...) -> integer, which performs a bit-wise or.
  * Added (& integer mask ...) -> integer, which performs a bit-wise and.
  * Added (<< integer offset) -> integer, which performs a bit-wise shift-left.
  * Added (>> integer offset) -> integer, which performs a bit-wise shift-or.
  * Added (^ integer offset) -> integer, which performs a bit-wise shift-or.
  * Added (! integer offset) -> integer, which returns a bit complement.
  * Added a Knuth / Fisher-Yates shuffle module, lib/shuffle.
  * Added list->vector and vector->list primitives.
  * Added (scan host-list port-list conns timeout) to mosref/scanner, which
    will populate the recon database with contacts as they are found.

- 6/28/2006, Second Generation Bootstrap
  * Modified the build process to permit building MOSVM without a supporting
    scheme compiler if either a previous installation of MOSVM is available,
    or if the Mosquito Lisp dependencies of MOSC and MOSVM have not changed.

  * Added display fix for bin/manifest under MOSVM, submitted by Ari Johnson.

- 6/27/2006, MOSVM Installer
  * Add an install.ms script for unix users.
  * Add an install target for unix users.
  * Added the (locate-file file-name path ..) -> file-path primitive.